...
                              painter = painterResource(id = R.drawable.googleg_standard_color_18),
                              contentDescription = null,
                          )
                          Text(
                              style = MaterialTheme.typography.button,
                              color = MaterialTheme.colors.onSurface,
                              text = "Register and Login with Google")
                          Icon(
                              tint = Color.Transparent,
                              imageVector = Icons.Default.MailOutline,
                              contentDescription = null,
                          )
                        })
...
