...
  var selectedIndex by remember { mutableStateOf(0) }
  val items =
      listOf(
          "Invite Participants",
          "Remove Participants",
          "Edit Point System",
          "Edit Participant Name",
          "Edit Tournament Name",
      )
  val buttonTitle = items[selectedIndex]

  Scaffold(
      topBar = {
        Column(modifier = Modifier.fillMaxWidth()) {
...
                      navController.navigate("schedule_route/${tourney.name}")
                      // navController.navigate(BottomBarScreens.Add.route)
                    },
                ) {
                  Icon(
                      imageVector = Icons.Rounded.CalendarToday,
                      contentDescription = "Button to see the game schedule",
                  )
                }
                IconButton(
                    onClick = { showAddParticipantDialog.value = true },
                ) {
                  Icon(
...
                    tournamentName = tournamentName) {
                  IconButton(
                      onClick = { expanded = true },
                  ) {
                    Icon(
                        imageVector = Icons.Rounded.Edit,
                        contentDescription = "Button to remove Participants",
                    )
                  }
                }
                IconButton(
                    onClick = {
                      showDeleteDialog.value = true
                      // deleteTournament(tourney.name)
                      // navController.navigate(BottomBarScreens.Tournament.route)
                    },
                ) {
                  Icon(
                      imageVector = Icons.Rounded.Delete,
                      contentDescription = "Button to Delete Tournament",
                  )
                }
                IconButton(
                    onClick = { navController.navigate(BottomBarScreens.Tournament.route) },
                ) {
                  Icon(
...
                .fillMaxWidth()
                .height(50.dp),
            enabled =
                participantName.isNotEmpty() &&
                        !participantName.contains(" ") &&
                    !tournamentContainsParticipant(tournamentName, participantName),
            content = { Text(text = "Add") },
            onClick = {
              showAddParticipantDialog.value = false
              addParticipantToTournament(tournamentName, participantName)
              pushLocalToDb()
                getParticipantsFromDb()
            })
...
@Composable
fun DeleteTournamentPopUp(navController: NavController, tourney: Tournament) {

  AlertDialog(
      onDismissRequest = { showDeleteDialog.value = false },
      title = { Text(text = "Delete Tournament?") },
      text = { Text("Are you sure you want do delete this Tournament?") },
      dismissButton = { Button(onClick = { showDeleteDialog.value = false }) { Text("No") } },
      confirmButton = {
        Button(
            content = { Text("Yes") },
            onClick = {
                showDeleteDialog.value = false
              navController.navigate(BottomBarScreens.Tournament.route)
              removeTournament(tourney)
            })
      })
...
                                  boolVicPointMessage = true
                              } else if (boolVicPointMessage) {
                                  boolVicPointMessage = false
                                  showMessage(context, "to many Victory Points, max is 999")
                              }
                          },
                          label = { Text(text = "New Victory Points") },
                      )
                      Box(modifier = Modifier.align(Alignment.CenterHorizontally)){
                          Text(text = "Old Tie Points: ${tourney.pointsTie}")
                      }
                      OutlinedTextField(
                          modifier = Modifier.padding(horizontal = 20.dp, vertical = 20.dp),
...
                                  boolTiePointMessage = true
                              } else if (boolTiePointMessage) {
                                  boolTiePointMessage = false
                                  showMessage(context, "to many Tie Points, max is 999")
                              }
                          },
                          label = { Text(text = "New Tie Points") },
                      )
                  }
                      Button(
                          modifier = Modifier
                              .fillMaxWidth()
                              .height(50.dp),
...
                          })

                      Button(
                          modifier = Modifier
                              .fillMaxWidth()
                              .height(50.dp),
                          content = { Text(text = "Cancel") },
                          onClick = {
                              navController.navigate("single_tournament_route/${tourney.name}")


                          })

...
                            modifier =
                            Modifier.onGloballyPositioned { coordinates ->
                                // This value is used to assign to the DropDown the same width
                                textfieldSize = coordinates.size.toSize()
                            },
                            onValueChange = { selectedParticipantName = it },
                            label = { Text("Old Participant Name") },
                            leadingIcon = {
                                IconButton(onClick = { /*TODO*/}) {
                                    Icon(
                                        imageVector = Icons.Filled.FormatListNumbered,
                                        contentDescription = "TournamentList")
                                }
...
                        modifier = Modifier
                            .fillMaxWidth()
                            .height(50.dp),
                        enabled =
                        newParticipantName.isNotEmpty(),

                        content = { Text(text = "Change") },
                        onClick = {
                            changeName(selectedParticipantName, newParticipantName, tournamentName)
                            navController.navigate("single_tournament_route/$tournamentName")
                            // Navigiere zum com.example.turnierplaner.tournament.leagueSystem.Tournament
                            // Tab
                        })
...
                                    showMessage(context, "Tournament Name is to long")
                                }
                                if(allTournamentContainsTournament(tournamentName) ){
                                    showMessage(context, "Same Tournament Name")
                                }
                            },
                            label = { Text(text = "New Tournament Name") },
                            keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
                            keyboardActions = KeyboardActions(onDone = { keyboardController?.hide() }),
                            /*leadingIcon = {
                                IconButton(onClick = { /*TODO*/ }) {
                                    Icon(
                                        imageVector = Icons.Filled.SportsFootball,
...
