...
                            onClick = { selectedItem.value = "Home" },
                            alwaysShowLabel = false)

                        BottomNavigationItem(
                            icon = { Icon(Icons.Filled.List, "") },
                            label = {
                                Text(text = "com.example.turnierplaner.tournament.leagueSystem.Tournament")
                            },
                            selected =
                            selectedItem.value ==
                                    "com.example.turnierplaner.tournament.leagueSystem.Tournament",
                            onClick = {
                                navController.navigate(BottomBarScreens.Tournament.route)
...
