...
                      showAddTeamDialog.value = true
                      // navController.navigate(BottomBarScreens.Add.route)
                    },
                ) {
                  Icon(
                      imageVector = Icons.Rounded.Add,
                      contentDescription = "Button to add new Player",
                  )
                }
                IconButton(
                    onClick = {
                      showDeleteDialog.value = true
                      // deleteTournament(tourney.name)
...
  AlertDialog(
      modifier = Modifier.size(250.dp, 275.dp),
      text = {
        Column {
          Text(
              modifier = Modifier.padding(horizontal = 10.dp),
              text = "Add new Player to Tournament")

          // Rest of the dialog content
        }
      },
      onDismissRequest = { showAddTeamDialog.value = false },
      buttons = {
...
